--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>754</width>
-            <height>593</height>
+            <height>643</height>
         </rect>
     </property>
     <property name="caption">
@@ -1384,7 +1384,7 @@ None - no buttons, only the slider</string>
                         <property name="sizeHint">
                             <size>
                                 <width>20</width>
-                                <height>34</height>
+                                <height>19</height>
                             </size>
                         </property>
                     </spacer>
@@ -1580,14 +1580,6 @@ None - no buttons, only the slider</string>
                                     <string>Border menuitems</string>
                                 </property>
                             </widget>
-                            <widget class="QLabel" row="12" column="0">
-                                <property name="name">
-                                    <cstring>textLabel1_15</cstring>
-                                </property>
-                                <property name="text">
-                                    <string>Stripe (KDE):</string>
-                                </property>
-                            </widget>
                             <spacer row="10" column="3" rowspan="1" colspan="3">
                                 <property name="name">
                                     <cstring>spacer4_2_2</cstring>
@@ -1605,44 +1597,12 @@ None - no buttons, only the slider</string>
                                     </size>
                                 </property>
                             </spacer>
-                            <widget class="QComboBox" row="12" column="5" rowspan="1" colspan="2">
-                                <property name="name">
-                                    <cstring>menuStripeAppearance</cstring>
-                                </property>
-                                <property name="enabled">
-                                    <bool>false</bool>
-                                </property>
-                            </widget>
-                            <widget class="QCheckBox" row="11" column="0" rowspan="1" colspan="7">
-                                <property name="name">
-                                    <cstring>thinnerMenuItems</cstring>
-                                </property>
-                                <property name="text">
-                                    <string>Thinner menu items</string>
-                                </property>
-                            </widget>
                             <widget class="QCheckBox" row="9" column="0" rowspan="1" colspan="4">
                                 <property name="name">
                                     <cstring>useHighlightForMenu</cstring>
                                 </property>
                                 <property name="text">
                                     <string>Use 'highlight' color for active menuitems</string>
-                                </property>
-                            </widget>
-                            <widget class="QComboBox" row="12" column="2">
-                                <property name="name">
-                                    <cstring>menuStripe</cstring>
-                                </property>
-                            </widget>
-                            <widget class="KColorButton" row="12" column="3" rowspan="1" colspan="2">
-                                <property name="name">
-                                    <cstring>customMenuStripeColor</cstring>
-                                </property>
-                                <property name="enabled">
-                                    <bool>false</bool>
-                                </property>
-                                <property name="text">
-                                    <string></string>
                                 </property>
                             </widget>
                             <widget class="QLabel" row="10" column="0" rowspan="1" colspan="2">
@@ -1661,12 +1621,65 @@ None - no buttons, only the slider</string>
                                     <string>%</string>
                                 </property>
                             </widget>
-                            <widget class="QCheckBox" row="13" column="0">
+                            <widget class="KColorButton" row="13" column="3" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>customMenuStripeColor</cstring>
+                                </property>
+                                <property name="enabled">
+                                    <bool>false</bool>
+                                </property>
+                                <property name="text">
+                                    <string></string>
+                                </property>
+                            </widget>
+                            <widget class="QLabel" row="13" column="0">
+                                <property name="name">
+                                    <cstring>textLabel1_15</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Stripe (KDE):</string>
+                                </property>
+                            </widget>
+                            <widget class="QComboBox" row="13" column="5" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>menuStripeAppearance</cstring>
+                                </property>
+                                <property name="enabled">
+                                    <bool>false</bool>
+                                </property>
+                            </widget>
+                            <widget class="QComboBox" row="13" column="2">
+                                <property name="name">
+                                    <cstring>menuStripe</cstring>
+                                </property>
+                            </widget>
+                            <widget class="QCheckBox" row="14" column="0">
                                 <property name="name">
                                     <cstring>popupBorder</cstring>
                                 </property>
                                 <property name="text">
                                     <string>Border popupmenus</string>
+                                </property>
+                            </widget>
+                            <widget class="QCheckBox" row="12" column="0" rowspan="1" colspan="7">
+                                <property name="name">
+                                    <cstring>thinnerMenuItems</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Thinner menu items</string>
+                                </property>
+                            </widget>
+                            <widget class="QLabel" row="11" column="0" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>textLabel1_16</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Sub-menu delay:</string>
+                                </property>
+                            </widget>
+                            <widget class="KIntNumInput" row="11" column="2">
+                                <property name="name">
+                                    <cstring>menuDelay</cstring>
                                 </property>
                             </widget>
                         </grid>
@@ -2326,6 +2339,7 @@ None - no buttons, only the slider</string>
     <tabstop>borderMenuitems</tabstop>
     <tabstop>useHighlightForMenu</tabstop>
     <tabstop>lighterPopupMenuBgnd</tabstop>
+    <tabstop>menuDelay</tabstop>
     <tabstop>thinnerMenuItems</tabstop>
     <tabstop>menuStripe</tabstop>
     <tabstop>customMenuStripeColor</tabstop>
@@ -2364,6 +2378,7 @@ None - no buttons, only the slider</string>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
+    <includehint>knuminput.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
